deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: product-catalog-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
        - name: product-catalog
          image: bharu2703/product-catalog:v1
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 8080
