ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-catalog-ingress
  namespace: v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-product-catalog.local
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: product-catalog-service
            port:
              number: 80
      - path: /v1.1
        pathType: Prefix
        backend:
          service:
            name: product-catalog-service
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: product-catalog-service
            port:
              number: 80
